[gd_scene load_steps=3 format=3 uid="uid://oy8jsudbupu0"]

[ext_resource type="Script" uid="uid://74xofhorearv" path="res://ui/game_menu/shop/item_template.gd" id="1_lvin6"]
[ext_resource type="StyleBox" uid="uid://c30nkhe5wie3g" path="res://ui/game_menu/shop/item_template.tres" id="2_wibli"]

[node name="Item" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_lvin6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 195.0
offset_bottom = 300.0

[node name="item_photo" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="item_name" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("2_wibli")
text = "Title of Item"

[node name="item_buff" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("2_wibli")
text = "Item buff"

[node name="item_type" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("2_wibli")
text = "Item type"

[node name="item_cost" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("2_wibli")
text = "Cost"

[node name="buy_item" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.864675, 0.864675, 0.864675, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
text = "BUY"

[connection signal="pressed" from="VBoxContainer/buy_item" to="." method="_on_buy_item_pressed"]
